fix: header z-index

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 header {
-  z-index: 10010
+  z-index: 1005
 }
 
 .pop-bg {
